<resources>
    <string name="app_name">In the flow</string>
    <string name="theater_masks_info">Info for the persona page</string>
    <string name="choose_personna">Let us know the kind of place you are looking
        for</string>
    <string name="energy_info">Image intuitive for energy</string>
    <string name="energetic">Energetic</string>
    <string name="relaxed">Relaxed</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_maps2">Map</string>
    <string name="options_personna">Energetic or Relaxed?</string>
    <string name="part_community">With the help of Science and Intelligent Algorithms, we
        are here to provide you with best recommendations</string>
    <string name="personna_flag_reason">With knowing your choice, the app will be able to
        filter only the best recommendations for you. But you can always change this later</string>
    <string name="get_started_button">Get Started</string>
    <string name="open_settings">Open Settings</string>
    <string name="exit">Exit</string>
    <string name="try_again">Try Again</string>
    <string name="get_started_arrow">&#xf061;</string>
    <string name="open_settings_icon">&#xf0ad;</string>
    <string name="exit_icon">&#xf2f5;</string>
    <string name="refresh_icon">&#xf2f1;</string>
    <string name="more_options">&#xf150;</string>
    <string name="whats_this_icon">&#xf128;</string>
    <string name="title_activity_personna">PersonnaActivity</string>
    <string name="error_internet">Can\'t connect to internet</string>
    <string name="energetic_selection">Energetic</string>
    <string name="relaxed_selection">Relaxing</string>
    <string name="share_data">Share my data</string>
    <string name="whats_this">Know More</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
</resources>
