<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonnaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="top|center_vertical|center_horizontal|center"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal|center|clip_vertical"
            android:text="@string/choose_personna"
            android:textColor="@color/dark_grey"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_energy"
                android:fontFamily="@font/malibold"
                android:gravity="center_vertical|center_horizontal|center"
                android:padding="25dp"
                android:text="@string/energetic_selection"
                android:textColor="@color/dark_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_relax"
                android:fontFamily="@font/malibold"
                android:gravity="center_vertical|center_horizontal|center"
                android:padding="25dp"
                android:text="@string/relaxed_selection"
                android:textColor="@color/dark_grey"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/personna_flag"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_weight="0.75"
            android:fontFamily="@font/robotoregular"
            android:gravity="center"
            android:text="@string/personna_flag_reason"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal|center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/skip_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:background="@drawable/stroke_button"
                android:gravity="center"
                android:onClick="skipToMap"
                android:orientation="horizontal"
                android:visibility="visible"
                app:cornerRadius="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotoregular"
                    android:text="@string/skip"
                    android:textColor="@color/button_default"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/next_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:background="@drawable/button"
                android:gravity="center"
                android:onClick="setChoice"
                android:orientation="horizontal"
                android:visibility="visible"
                app:cornerRadius="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotoregular"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fontawesomesolid"
                    android:paddingLeft="25dp"
                    android:text="@string/get_started_arrow"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>