<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:backgroundTint="@color/green_dense"
        android:background="@color/green_dense"
        android:gravity="center"
        android:weightSum="2"
        android:elevation="10dp"
        android:padding="20dp">
        <CheckBox
            android:id="@+id/Energetic_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energetic"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:theme="@style/MyCheckBox"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/Relaxed_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relaxed"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:theme="@style/MyCheckBox"
            android:checked="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontawesomesolid"
            android:background="@color/green_dense"
            android:backgroundTint="@color/green_dense"
            android:textSize="35dp"
            android:text="@string/more_options"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>
