<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/imageHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_theater_masks_new_two"
                android:layout_weight="1"
                android:layout_gravity="center" />
        </LinearLayout>



        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/options_personna"
            android:textColor="@color/dark_grey"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:fontFamily="@font/malibold"/>

        <TextView
            android:id="@+id/serve_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/robotoregular"
            android:text="@string/part_community"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:background="@drawable/button"
            app:cornerRadius="50dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:onClick="openPersonna">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:text="@string/get_started_button"
                android:textColor="@color/white"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontawesomesolid"
                android:text="@string/get_started_arrow"
                android:paddingLeft="25dp"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>