<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ErroActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_frankenstein" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/frankfont"
            android:textSize="18sp"
            android:text="Test"
            android:textColor="@color/dark_grey" />


        <LinearLayout
            android:id="@+id/button_open_internet"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:background="@drawable/button"
            app:cornerRadius="50dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:onClick="openSettings">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:text="@string/open_settings"
                android:textColor="@color/white"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontawesomesolid"
                android:text="@string/open_settings_icon"
                android:paddingLeft="25dp"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/button_exit_app"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:background="@drawable/refresh"
            app:cornerRadius="50dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:onClick="closeApp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:text="@string/try_again"
                android:textColor="@color/white"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontawesomesolid"
                android:text="@string/refresh_icon"
                android:paddingLeft="25dp"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>